extra bugs squashed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,6 @@
 @import 'jekyll-theme-cayman';
   
 // Override CSS
-
 :root {
   --primary-color: black;
   --secondary-color: white;
@@ -22,7 +21,6 @@ html {
 }
 
 // Custom Scrollbar
-
 /* Works on Firefox */
 * {
   scrollbar-width: thin;
@@ -44,7 +42,7 @@ html {
   border: 3px solid transparent;
 }
 
-// header FULL PAGE
+// Header (full)
 h1.full-page {
   display: flex;
   justify-content: center;
@@ -76,7 +74,7 @@ h1.full-page {
   border-top: solid 1px grey;
 }
 
-// Navbar stuff
+// Navbar
 ul.navbar-main {
   list-style-type: none;
   margin: 0;
@@ -94,64 +92,71 @@ ul.navbar-main li {
   float: left;
 }
 
-img.site-logo {
-  padding-left: 16px;
+// Logo
+ul.navbar-main a.logo {
+  padding: 8px 16px;
+  display: inline-block;
+  fill: var(--primary-color);
 }
 
-// Dropdown box container
-
+// Main-Title
 ul.navbar-main li a, ul.navbar-main .dropbtn {
   display: inline-block;
   text-align: center;
-  padding: 14px 16px;
+  margin: 10px 6px;
+  padding: 4px 10px;
   text-decoration: none;
   color: var(--primary-color);
 }
 
-ul.navbar-main li a:hover, ul.navbar-main .dropdown:hover .dropbtn, ul.navbar-main .dropdown-content a:hover {
+// Main-Title (active)
+ul.navbar-main li a.active {
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+}
+
+// Any-Title (hover) [except dropbtn]
+ul.navbar-main li a:hover, ul.navbar-main .dropdown-content a:hover {
   color: white;
   background-color: lightslategrey;
 }
 
-// Main-Title
+// Dropdown
 ul.navbar-main li.dropdown {
   display: flex;
   justify-content: center;
 }
 
-// Contents-Title
+// Dropdown Contents
 ul.navbar-main .dropdown-content {
   display: none;
   position: fixed;
   transform: translate(0, 20%);
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   min-width: 88px;
   z-index: 1;
 }
 
+// Dropdown Contents-Title
 ul.navbar-main .dropdown-content a {
-  color: var(--primary-color);
+  color: var(--secondary-color);
   padding: 12px 16px;
   display: block;
   text-align: center;
 }
 
+// Dropdown Contents-Title (active)
+ul.navbar-main .dropdown-content a.active {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+}
+
+// Dropdown contents show (hover)
 ul.navbar-main .dropdown:hover .dropdown-content {
   display: block;
 }
 
-// Title-Active
-ul.navbar-main li a.active {
-  margin: 10px 6px;
-  padding: 4px 10px;
-}
-ul.navbar-main a.active {
-  color: var(--secondary-color);
-  background-color: var(--primary-color);
-}
-
 // Full image background
-
 div.page-bg {
   position: fixed;
   top: 0;
@@ -163,14 +168,12 @@ div.page-bg {
 }
 
 // Divider
-
 hr.black {
   border-top: 1px solid black;
   background-color: transparent;
 }
 
 // Text container for hint
-
 .hint {
   position: relative;
   display: inline-block;
@@ -178,7 +181,6 @@ hr.black {
 }
 
 // Hint
-
 .hint .hint-text {
   visibility: hidden;
   background-color: #000040;
